--- a/MT/LQ1_PING-AY_CS3A/drinks.html
+++ b/MT/LQ1_PING-AY_CS3A/drinks.html
@@ -6,6 +6,7 @@
 	<title>Drinks</title>
 </head>
 <body>
+	<!-- Header  -->
 	<header>
 		<h1>SnapShop</h1>
 		<hr>
@@ -17,11 +18,14 @@
 		<h3>0927713153</h3>
 	</header>
 
+	<!-- Table for drinks category  -->
 	<table border="1" cellspacing="0">
 		<thead style="color: #fff; background-color: #343a40;">
+			<!-- Category name -->
 			<tr>
 				<th colspan="5">Drinks</th>
 			</tr>
+			<!-- Table header  -->
 			<tr>
 				<th>Name</th>
 				<th>Weight/Volume</th>
@@ -31,6 +35,7 @@
 			</tr>
 		</thead>
 		<tbody>
+			<!-- Row of each item with their corresponding information  -->
 			<tr>
 				<td>Coke</td>
 				<td>330 ml</td>
@@ -227,6 +232,7 @@
 		</tbody>
 	</table>
 
+	<!-- Footer  -->
 	<footer>
 		<h2>SnapShop</h2>
 		<p>
