--- a/MT/LQ1_PING-AY_CS3A/fruits&vegetables.html
+++ b/MT/LQ1_PING-AY_CS3A/fruits&vegetables.html
@@ -6,6 +6,7 @@
 	<title>Fruits & Vegetables</title>
 </head>
 <body>
+	<!-- Header  -->
 	<header>
 		<h1>SnapShop</h1>
 		<hr>
@@ -17,11 +18,14 @@
 		<h3>0927713153</h3>
 	</header>
 	
+	<!-- Table for fruits and vegetables category  -->
 	<table border="1" cellspacing="0">
 		<thead style="color: #fff; background-color: #343a40;">
+			<!-- Category Name  -->
 			<tr>
 				<th colspan="5">Fruits and Vegetables</th>
 			</tr>
+			<!-- Table header  -->
 			<tr>
 				<th>Name</th>
 				<th>Weight/Volume</th>
@@ -184,7 +188,7 @@
 		</tbody>
 	</table>
 	
-
+	<!-- Footer  -->
 	<footer>
 		<h2>SnapShop</h2>
 		<p>
