--- a/MT/LQ1_PING-AY_CS3A/toiletries.html
+++ b/MT/LQ1_PING-AY_CS3A/toiletries.html
@@ -6,6 +6,7 @@
 	<title>Toiletries</title>
 </head>
 <body>
+	<!-- Header  -->
 	<header>
 		<h1>SnapShop</h1>
 		<hr>
@@ -17,11 +18,14 @@
 		<h3>0927713153</h3>
 	</header>
 	
+	<!-- Table for toiletries category  -->
 	<table border="1" cellspacing="0">
 		<thead style="color: #fff; background-color: #343a40;">
+			<!-- Category name  -->
 			<tr>
 				<th colspan="5">Toileteries</th>
 			</tr>
+			<!-- Table header  -->
 			<tr>
 				<th>Product Name</th>
 				<th>Weight</th>
@@ -206,7 +210,7 @@
 		</tbody>
 	</table>
 	
-
+	<!-- Footer  -->
 	<footer>
 		<h2>SnapShop</h2>
 		<p>
