--- a/MT/LQ1_PING-AY_CS3A/index.html
+++ b/MT/LQ1_PING-AY_CS3A/index.html
@@ -27,6 +27,8 @@
 		</p>
 		<!-- Logo  -->
 		<img src="./images/snapshop.webp" width="320px">
+		<!-- Store photo  -->
+		<img src="./images/front.webp" height="320px">
 	</header>
 
 	<!-- Links for different categories  -->
