--- a/Fin/T3-LA1.2_PING-AYSJ_CS3A/login.html
+++ b/Fin/T3-LA1.2_PING-AYSJ_CS3A/login.html
@@ -8,24 +8,39 @@
 	<title>Login</title>
 </head>
 <body class="bg-gray">
+	<!-- Main container for the hero section and login form, with gray background and light text -->
 	<div class="hero-container bg-gray txt-light">
+
+		<!-- Hero section with logo and platform description -->
 		<div class="hero">
 			<img class="logo" src="./resources/logo-name-hero.png" alt="">
-			<p>A 100% anonymous social platform where you can freely share thoughts, vent, and seek advice without fear of judgment. It's your safe space to express yourself, like a digital freedom wall.</p>
+			<p>
+			A 100% anonymous social platform where you can freely share thoughts, vent, and seek advice without fear of judgment. It's your safe space to express yourself, like a digital freedom wall.
+			</p> 
 		</div>
-		<div class="login bg-black txt-light"> 
+
+		<!-- Login form section with black background and light text -->
+		<div class="login bg-black txt-light">
 			<p class="txt-white">Speak freely,<br>anonymously</p>
+
+			<!-- User login form -->
 			<form action="" method="">
-				<label for="username">Username</label><br>
-				<input class="bg-gray txt-light" type="text" id="username" name="username"><br>
+			<!-- Username input -->
+			<label for="username">Username</label><br>
+			<input class="bg-gray txt-light" type="text" id="username" name="username"><br>
 
-				<label for="password">Password</label><br>
-				<input class="bg-gray txt-light" type="password" id="password" name="password"><br>
+			<!-- Password input -->
+			<label for="password">Password</label><br>
+			<input class="bg-gray txt-light" type="password" id="password" name="password"><br>
 
-				<a class="btn bg-gold" href="./newsfeed.html">Login</a>
-    		</form>
-		<p>Already a member? <a class="txt-gold" href="sign-up.html">Create account</a></p>
+			<!-- Login button (styled link) -->
+			<a class="btn bg-gold" href="./newsfeed.html">Login</a>
+			</form>
+
+			<!-- Link to sign-up page for new users -->
+			<p>Already a member? <a class="txt-gold" href="sign-up.html">Create account</a></p>
 		</div>
+
 	</div>
 </body>
 </html>
