--- a/Fin/T3-LA1.2_PING-AYSJ_CS3A/sign-up.html
+++ b/Fin/T3-LA1.2_PING-AYSJ_CS3A/sign-up.html
@@ -8,30 +8,47 @@
 	<title>Sign Up</title>
 </head>
 <body class="bg-gray">
+	<!-- Container for the hero section and sign-up form -->
 	<div class="hero-container">
+
+		<!-- Hero section with logo and description -->
 		<div class="hero bg-gray txt-light">
 			<img class="logo" src="./resources/logo-name-hero.png" alt="">
-			<p>A 100% anonymous social platform where you can freely share thoughts, vent, and seek advice without fear of judgment. It's your safe space to express yourself, like a digital freedom wall.</p>
+			<p>
+			A 100% anonymous social platform where you can freely share thoughts, vent, and seek advice without fear of judgment. It's your safe space to express yourself, like a digital freedom wall.
+			</p>
 		</div>
+
+		<!-- Sign-up form section -->
 		<div class="sign-up bg-black txt-light">
 			<p class="txt-white">Create<br>new account</p>
+			
+			<!-- User registration form -->
 			<form action="" method="">
-				<label for="username">Username</label><br>
-				<input class="bg-gray txt-light" type="text" id="username" name="username"><br>
+			<!-- Username input field -->
+			<label for="username">Username</label><br>
+			<input class="bg-gray txt-light" type="text" id="username" name="username"><br>
 
-				<label for="email">Email</label><br> 
-				<input class="bg-gray txt-light" type="email" id="email" name="email"><br>
+			<!-- Email input field -->
+			<label for="email">Email</label><br>
+			<input class="bg-gray txt-light" type="email" id="email" name="email"><br>
 
-				<label for="password">Password</label><br>
-				<input class="bg-gray txt-light" type="password" id="password" name="password"><br>
+			<!-- Password input field -->
+			<label for="password">Password</label><br>
+			<input class="bg-gray txt-light" type="password" id="password" name="password"><br>
 
-				<label for="confirm-password">Confirm Password</label><br>
-				<input class="bg-gray txt-light" type="password" id="confirm-password" name="confirm-password"><br>
+			<!-- Confirm password input field -->
+			<label for="confirm-password">Confirm Password</label><br>
+			<input class="bg-gray txt-light" type="password" id="confirm-password" name="confirm-password"><br>
 
-				<a class="btn bg-gold" href="./newsfeed.html">Create Account</a>
-    		</form>
-		<p>Already a member? <a class="txt-gold" href="login.html">Log in</a></p>
+			<!-- Link to create account (styled as a button) -->
+			<a class="btn bg-gold" href="./newsfeed.html">Create Account</a>
+			</form>
+
+			<!-- Link for existing users to log in -->
+			<p>Already a member? <a class="txt-gold" href="login.html">Log in</a></p>
 		</div>
+
 	</div>
 </body>
 </html>
